--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-success">
             <div class="container">
-                <img class="navbar-brand" src="./assets/img/logo-white.png" alt="Logo Cuppon Blanco">
+                <img class="navbar-brand logo" src="./assets/img/logo-white.png" alt="Logo Cuppon Blanco">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -43,10 +43,10 @@
 
     <!--CARDS-->
     <div class="container py-4">
-        <div class="row align-items-start">
+        <div class="row align-items-start mb-5">
             <div class="col">
                 <!--CARD Plumon-->
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="Plumon tamaño a elección">
                     <div class="card-body">
                         <h5 class="card-title">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
@@ -61,7 +61,7 @@
             </div>
             <div class="col">
                 <!--Card Entrada para compartir-->
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./assets/img/cupon-2.jpg" class="card-img-top"
                         alt="Imagen referencial cupon de comida para compartir">
                     <div class="card-body">
@@ -77,7 +77,7 @@
             </div>
             <div class="col">
                 <!--Card Evaluacion dental-->
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./assets/img/cupon-3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Evaluación integral + blanqueamiento dental led + limpieza + fluoración
@@ -92,10 +92,11 @@
                 </div>
             </div>
         </div>
-        <div class="row align-items-center">
+
+        <div class="row">
             <div class="col">
                 <!--Card Colacion para 2-->
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./assets/img/cupon-4.jpg" class="card-img-top" alt="Colación para 2">
                     <div class="card-body">
                         <h5 class="card-title">Colación para 2 personas + postre (no incluye bebidas)</h5>
@@ -112,7 +113,7 @@
             </div>
             <div class="col">
                 <!--Card Tickets-->
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./assets/img/cupon-5.jpg" class="card-img-top" alt="Tickets">
                     <div class="card-body">
                         <h5 class="card-title">1, 2 o 4 tickets para Stukids. Elige sucursal</h5>
@@ -127,7 +128,7 @@
             </div>
             <div class="col">
                 <!--Card San Pedro-->
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./assets/img/cupon-6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</h5>
@@ -146,23 +147,31 @@
     </div>
     <!--Formulario suscripción-->
 
-    <form class="bg-success">
-        <fieldset disabled>
-            <legend>Recibe cupones en tu correo</legend>
-            <div class="mb-3">
-                <input type="text" id="disabledTextInput" class="form-control " placeholder="Nombre">
+    <section class="bg-success formulario">
+        <form class="text-white p-2 pt-5 pb-5 p-md-5 mt-5">
+            <div class="container">
+                <div class="mb-3 text-center">
+                    <h4 class="mb-4 fs-4">Recibe cupones en tu correo</h4>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Correo Electrónico">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-light">Enviar</button>
+                </div>
             </div>
-            <div class="mb-3">
-                <input type="text" id="disabledTextInput" class="form-control" placeholder="Correo Electrónico">
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </fieldset>
-    </form>
-    <footer class="d-flex align-items-center">
-        <img class="footer" src="./assets/img/logo-black.png" alt="Logo Cuppon negro">
+        </form>
+    </section>
+    
 
-        <p>© 2018 Cuppon Latam .Todos los derechos reservados.</p>
+    <footer class="p-4 text-center">
+        <div class="container">
+            <img class="footer logo" src="./assets/img/logo-black.png" alt="Logo Cuppon negro">
+            <p>© 2018 Cuppon Latam .Todos los derechos reservados.</p>
+        </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
